--- a/widgets/tabs.html
+++ b/widgets/tabs.html
@@ -76,7 +76,7 @@ advanced_tab:
 
 <!-- Required CSS -->
 <div class="wrapper">
-  <h2>Required CSS</h2>
+  <h2>Required Styles</h2>
   <div class='css'>
     {% highlight scss %}
     /* Required SCSS Styling */
