Cleaned up tabs

--- a/widgets/tabs.html
+++ b/widgets/tabs.html
@@ -117,11 +117,11 @@ advanced_tab:
 
 <!-- More Examples -->
 <div class="wrapper" id="tabs_examples_page">
-  <h2>Further Examples</h2>
+  <h1>Tabs Examples</h1>
   <div class="test" name="Simple">
     <a name="Simple"></a>
 
-    <h3>Selecting the Second Tab</h3>
+    <h2>Selecting the Second Tab</h2>
     <div class="description">
       <p>Here, as proof of principle, we're putting the <span class="inline_code">data-ur-state="enabled"</span> attribute on the
         second tab to illustrate that a different tab can be selected at the outset.</p>
@@ -132,15 +132,15 @@ advanced_tab:
       <span data-ur-tabs-component="button" data-ur-tab-id="third_sanity"> Third </span>
 
       <div data-ur-tabs-component="content" data-ur-tab-id="first_sanity">
-        <img width="70px" height="70px" src="../images/sample1.png?some_attr=noway">
+        <img width="100px" height="100px" src="../images/sample1.png?some_attr=noway">
       </div>
 
       <div data-ur-tabs-component="content" data-ur-state="enabled" data-ur-tab-id="second_sanity">
-        <img width="70px" height="70px" src="../images/sample2.png?some_attr=noway">
+        <img width="100px" height="100px" src="../images/sample2.png?some_attr=noway">
       </div>
 
       <div data-ur-tabs-component="content" data-ur-tab-id="third_sanity">
-        <img width="70px" height="70px" src="../images/sample3.png?some_attr=noway">
+        <img width="100px" height="100px" src="../images/sample3.png?some_attr=noway">
       </div>
 
     </div>
@@ -151,7 +151,7 @@ advanced_tab:
   <div class="test" name="accordions">
     <a name="accordions"></a>
 
-    <h3> Accordions with State </h3>
+    <h2> Accordions with State </h2>
 
     <div class="description">
       <p>So far, we've set one of the tabs to be enabled at the start. However, this isn't
