cleaned up togglers

--- a/site/widgets/toggler.html
+++ b/site/widgets/toggler.html
@@ -172,11 +172,11 @@
 
 <!-- Further Examples -->
 <div class="wrapper">
-  <h2>Further Examples</h2>
+  <h1>Toggler Examples</h1>
   
   <div class='test' name='DialogProper'>
     <a  name='DialogProper'></a>
-    <h3>Popup</h3>
+    <h2>Popup</h2>
   
     <div class='description'>
       <p>
@@ -202,7 +202,7 @@
   <div class='test' name='Nested' >
     <a  name='Nested'></a>
 
-    <h3> Nested Togglers</h3>
+    <h2> Nested Togglers</h2>
 
     <div class='description'>
 
