--- a/widgets/toggler.html
+++ b/widgets/toggler.html
@@ -79,11 +79,11 @@ advanced_tab:
 
 <!-- Further Examples -->
 <div class="wrapper">
-  <h2>Further Examples</h2>
+  <h1>Toggler Examples</h1>
   
   <div class='test' name='DialogProper'>
     <a  name='DialogProper'></a>
-    <h3>Popup</h3>
+    <h2>Popup</h2>
   
     <div class='description'>
       <p>
@@ -109,7 +109,7 @@ advanced_tab:
   <div class='test' name='Nested' >
     <a  name='Nested'></a>
 
-    <h3> Nested Togglers</h3>
+    <h2> Nested Togglers</h2>
 
     <div class='description'>
 
