Reverse Geocode is now known as Geolocation

--- a/widgets/geocode/button.html
+++ b/widgets/geocode/button.html
@@ -5,7 +5,7 @@ name: geocode_button
 widget_selected: selected
 ---
 <div class="wrapper">
-  <h1> Reverse Geocode with a Button </h1>
+  <h1> Geolocation with a Button </h1>
   
   <h2>Description</h2>
     <p>
@@ -21,7 +21,7 @@ widget_selected: selected
     </ul>
 
 
-  <h2>Demonstration</h2>
+`<h2>Demonstration</h2>
 <script>
 function foo(){
   alert("Populated zip value:" + x$("input[name='zip']")[0].value);
