geocode/button.html

--- a/download.html
+++ b/download.html
@@ -98,7 +98,7 @@ x$.ready(function() {
     <label for="carousel">Carousel</label>
     <br />
     <input id="geolocation" type="checkbox" />
-    <label for="geolocation">Reverse Geocode</label>
+    <label for="geolocation">Geolocation</label>
     <br />
     <input id="zoom" type="checkbox" />
     <label for="zoom">Zoom</label>
