--- a/site/widget_list.html
+++ b/site/widget_list.html
@@ -25,7 +25,7 @@
     <ul>
       <li> <a href="widgets/carousel.html"> Carousel </a> </li>
       <li> <a href="widgets/input_clear.html"> Input Clear </a> </li>
-      <li> <a href="widgets/geocode.html"> Reverse Geocode </a></li>
+      <li> <a href="widgets/geocode.html"> Geolocation </a></li>
       <li> <a href="widgets/tabs.html"> Tabs </a> </li>
       <li> <a href="widgets/toggler.html"> Toggler </a> </li>
       <li> <a href="widgets/zoom.html"> Zoom </a></li>
