--- a/site/widgets/geocode.html
+++ b/site/widgets/geocode.html
@@ -28,7 +28,7 @@
           <h2> Description </h2>
           <div class="description">
             <p>
-  This widget allows you to reverse geocode a location. You can use this to populate forms using the user's location. This is a singleton widget. This means only a single geocoder can exist per page. The elements you can populate are:
+  This widget allows you to Geolocation a location. You can use this to populate forms using the user's location. This is a singleton widget. This means only a single geocoder can exist per page. The elements you can populate are:
   <ul>
     <li>Street Address (only line 1, floor level is not present in the api)</li>
     <li>City</li>
