--- a/widget_list.html
+++ b/widget_list.html
@@ -13,7 +13,7 @@ widget_selected: selected
     <ul>
       <li> <a href="{{site.url}}widgets/carousel.html"> Carousel </a> </li>
       <li> <a href="{{site.url}}widgets/input_clear.html"> Input Clear </a> </li>
-      <li> <a href="{{site.url}}widgets/geocode.html"> Reverse Geocode </a></li>
+      <li> <a href="{{site.url}}widgets/geocode.html"> Geolocation </a></li>
       <li> <a href="{{site.url}}widgets/tabs.html"> Tabs </a> </li>
       <li> <a href="{{site.url}}widgets/toggler.html"> Toggler </a> </li>
       <li> <a href="{{site.url}}widgets/zoom.html"> Zoom </a></li>
