--- a/widgets/geocode/text_inputs.html
+++ b/widgets/geocode/text_inputs.html
@@ -5,7 +5,7 @@ name: geocode_text_inputs
 widget_selected: selected
 ---
 <div class="wrapper">
-  <h1> Reverse Geocode with Text Inputs </h1>
+  <h1> Geolocation with Text Inputs </h1>
   
   <h2>Description</h2>
   
@@ -18,7 +18,7 @@ widget_selected: selected
 
   
   <div class='test' data-ur-set="reverse-geocode">
-    <button  value="clickMe" typepe='button' data-ur-reverse-geocode-component="rg-button">Reverse Geocode</button>
+    <button  value="clickMe" typepe='button' data-ur-reverse-geocode-component="rg-button">Geolocation</button>
     <form action="geocode_submit" method="get" accept-charset="utf-8" >
       <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
       <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
