Added about page

--- a/about.html
+++ b/about.html
@@ -45,4 +45,45 @@ about_selected: selected
   </p>
   <small id="sidenote">*he may not have actually said this, but we think he'd love Uranium anyway.</small>
   <hr />
+  <div>
+  <h2>Who's Behind Uranium?</h2>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Sean Jezewski</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov1.JPG"/>
+      <p class="bio">Sean is the lead architect on Uranium - core design and philosophy.. He's the guy to
+        go to for most Uranium questions.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Hampton Catlin</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov4.JPG"/>
+      <p class="bio">Hampton helped with the core design and philosophy of Uranium.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Jeff Patzer</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov10.jpg"/>
+      <p class="bio">Jeff created the awesome <a href="{{site.url}}geocode.html">geocode widget</a>,
+        which allows you to reverse-geocode a user's location. The information gained
+        is then used to populate a form.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Wonja Fairbrother</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov12.jpg"/>
+      <p class="bio">Wonja transitioned the <a href="{{site.url}}carousel.html">carousel widget</a> from using xui to jquery.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Jessica Pan</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov11.jpg"/>
+      <p class="bio">Jessica refreshed the Uranium website.</p>
+    </div>
+  </div>
+</div>
 </div>
