--- a/site/about.html
+++ b/site/about.html
@@ -15,7 +15,7 @@
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   
-  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/widget_list.html" >Widgets</a>	<ul>		<li><a href="/widgets/carousel.html">Carousel</a></li>		<li><a href="/widgets/input_clear.html">Input Clear</a></li>		<li><a href="/widgets/geocode.html">Geolocation</a></li>		<li><a href="/widgets/tabs.html">Tabs</a></li>		<li><a href="/widgets/toggler.html">Toggler</a></li>		<li><a href="/widgets/zoom.html">Zoom</a></li>	</ul></div><a href="/" >TEST LINK</a>
+  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/widget_list.html" >Widgets</a>	<ul>		<li><a href="/widgets/carousel.html">Carousel</a></li>		<li><a href="/widgets/input_clear.html">Input Clear</a></li>		<li><a href="/widgets/geocode.html">Geolocation</a></li>		<li><a href="/widgets/tabs.html">Tabs</a></li>		<li><a href="/widgets/toggler.html">Toggler</a></li>		<li><a href="/widgets/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" class="selected">About</a>
 </nav>
 
     <div id="textbody">
@@ -58,6 +58,47 @@
   </p>
   <small id="sidenote">*he may not have actually said this, but we think he'd love Uranium anyway.</small>
   <hr />
+  <div>
+  <h2>Who's Behind Uranium?</h2>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Sean Jezewski</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov1.JPG"/>
+      <p class="bio">Sean is the lead architect on Uranium - core design and philosophy.. He's the guy to
+        go to for most Uranium questions.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Hampton Catlin</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov4.JPG"/>
+      <p class="bio">Hampton helped with the core design and philosophy of Uranium.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Jeff Patzer</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov10.jpg"/>
+      <p class="bio">Jeff created the awesome <a href="geocode.html">geocode widget</a>,
+        which allows you to reverse-geocode a user's location. The information gained
+        is then used to populate a form.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Wonja Fairbrother</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov12.jpg"/>
+      <p class="bio">Wonja transitioned the <a href="carousel.html">carousel widget</a> from using xui to jquery.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Jessica Pan</h2>
+    <div data-ur-toggler-component="content">
+      <img src="stylesheets/resources/moov11.jpg"/>
+      <p class="bio">Jessica refreshed the Uranium website.</p>
+    </div>
+  </div>
+</div>
 </div>
     <footer id="footer">
   <span>Brought to you by&hellip;</span>
