Cleaned up about page

--- a/about.html
+++ b/about.html
@@ -56,19 +56,19 @@ about_selected: selected
     </div>
   </div>
   <div data-ur-set="toggler">
-    <h2 data-ur-toggler-component="button">Hampton Catlin</h2>
-    <div data-ur-toggler-component="content">
-      <img src="stylesheets/resources/moov4.JPG"/>
-      <p class="bio">Hampton helped with the core design and philosophy of Uranium.</p>
-    </div>
-  </div>
-  <div data-ur-set="toggler">
     <h2 data-ur-toggler-component="button">Jeff Patzer</h2>
     <div data-ur-toggler-component="content">
       <img src="stylesheets/resources/moov10.jpg"/>
       <p class="bio">Jeff created the awesome <a href="{{site.url}}geocode.html">geocode widget</a>,
         which allows you to reverse-geocode a user's location. The information gained
         is then used to populate a form.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">Kevin Liou</h2>
+    <div data-ur-toggler-component="content">
+     <!--  <img src="stylesheets/resources/moov13.jpg"/> -->
+      <p class="bio">Kevin has been paramount in the Uranium refresh and helped converted many of the widgets from xui to jquery. </p>
     </div>
   </div>
   <div data-ur-set="toggler">
@@ -83,6 +83,19 @@ about_selected: selected
     <div data-ur-toggler-component="content">
       <img src="stylesheets/resources/moov11.jpg"/>
       <p class="bio">Jessica refreshed the Uranium website.</p>
+    </div>
+  </div>
+  <div data-ur-set="toggler">
+    <h2 data-ur-toggler-component="button">And More...</h2>
+    <div data-ur-toggler-component="content">
+      <p class="bio"><a href="https://github.com/cagria">Hampton Catlin</a></p>
+      <p class="bio"><a href="https://github.com/cagria">Aaron Leung</a></p>
+      <p class="bio"><a href="https://github.com/cagria">Sam Merry</a></p>
+      <p class="bio"><a href="https://github.com/malrase">Michael Catlin</a></p>
+      <p class="bio"><a href="https://github.com/letrest">Tevfik Sertel</a></p>
+      <p class="bio"><a href="https://github.com/hlui">Honie Lui</a></p>
+      <p class="bio"><a href="https://github.com/benbayard">Ben Bayard</a></p>
+      <p class="bio"><a href="https://github.com/cagria">Cagri Ozertem</a></p>
     </div>
   </div>
 </div>
