remove migration and make examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,6 @@
     <!-- <script src="../build/src/uranium-pretty.js"></script> -->
 
     <!-- Dev Links to Javascript Files -->
-    <script src="../lib/external/xui-2.3.2.js"></script>
     <script src="../lib/external/jquery-1.9.1.js"></script>
     <!-- <script src="../lib/external/showhide.js"></script> -->
     <!-- <script src="../lib/external/fade.js"></script> -->
@@ -16,7 +15,7 @@
     <!-- The one below is to the widget you're working on -->
     <!-- <script src="../lib/toggler.js"></script>
     <script src="../lib/tabs.js"></script> -->
-    <script src="../lib/jQuery.Uranium.js"></script>
+    <script src="../build/src/uranium.js"></script>
 
 
 
