Added kevin's pic

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ about_selected: selected
   <div data-ur-set="toggler">
     <h2 data-ur-toggler-component="button">Kevin Liou</h2>
     <div data-ur-toggler-component="content">
-     <!--  <img src="stylesheets/resources/moov13.jpg"/> -->
+      <img src="stylesheets/resources/moov13.jpg"/>
       <p class="bio">Kevin has been paramount in the Uranium refresh and helped converted many of the widgets from xui to jquery. </p>
     </div>
   </div>
