--- a/site/about.html
+++ b/site/about.html
@@ -80,7 +80,7 @@
   <div data-ur-set="toggler">
     <h2 data-ur-toggler-component="button">Kevin Liou</h2>
     <div data-ur-toggler-component="content">
-     <!--  <img src="stylesheets/resources/moov13.jpg"/> -->
+      <img src="stylesheets/resources/moov13.jpg"/>
       <p class="bio">Kevin has been paramount in the Uranium refresh and helped converted many of the widgets from xui to jquery. </p>
     </div>
   </div>
